# ruyi-bot-3

./: .gitignore  Cargo.toml  init-env.sh  init-repo.sh  main.py  requirements.txt  run.sh  system_msg.txt  tools.json  tools.jsonc  vllm_infer.py  vllm_infer_interface.py
discord-frontend/: Cargo.toml
discord-frontend/src/: main.rs
files-module/: Cargo.toml
files-module/src/: app.rs  lib.rs
gdrive-module/: Cargo.toml
gdrive-module/src/: main.rs
git-module/: Cargo.toml
git-module/src/: lib.rs
search-master/: Cargo.toml
search-master-interface/: Cargo.toml
search-master-interface/src/: lib.rs
search-master/src/: lib.rs
