[workspace]
resolver = "3"
members = ["discord-frontend" , "files-module", "gdrive-module", "search-master", "search-master-interface"]
exclude = []

[workspace.dependencies]
files-module.path = "files-module"
search-master-interface.path = "search-master-interface"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"

serde = "1.0.228"

[profile.release]
strip = false
debug = true
