[package]
name = "discord-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serenity = "0.12"
tracing.workspace = true
tokio.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
search-master.path = "../search-master"
rustc-hash = "2.1.1"
search-master-interface.workspace = true
