[package]
name = "gdrive-module"
version = "0.1.0"
edition = "2024"

[dependencies]
google-drive3 = "6.0.0"
hyper-rustls = "0.27.7"
hyper-util = "0.1.17"
rustls = { version = "0.23.33", features = ["ring"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
# yup-oauth2 = "12.1.0"
