[package]
name = "search-master"
version = "0.1.0"
edition = "2024"

[dependencies]
meilisearch-sdk = "0.30.0"
# serde.workspace = true
gdrive-module.path = "../gdrive-module"
git-module.path = "../git-module"
files-module.workspace = true
search-master-interface.workspace = true
tokio.workspace = true
tracing.workspace = true